--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,4 @@
 * {
-    font-family: 'Roboto Mono';
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
@@ -12,4 +9,54 @@
     transform: translate(-50%, -50%);
     border: 5px solid #000000;
     padding: 10px;
+}
+
+.app__container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+
+.question-container {
+	padding-bottom: 10px;
+	margin-bottom: 1em;
+	border-bottom: 0.8px solid #DBDEF0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.quizz__text {
+	padding: 12px;
+}
+
+.question-btn {
+	min-width: 95px;
+	min-height: 25px;
+	border: 0.8px solid #4D5B9E;
+	border-radius: 8px;
+	cursor: pointer;
+	font-family: "Inter", sans-serif;
+	font-weight: 500;
+	background-color: #F5F7FB;
+	color: #293264;
+	margin: 0 12px 12px 0;
+}
+
+.question-btn-selected {
+	min-width: 95px;
+	height: 25px;
+	border: none;
+	border-radius: 8px;
+	cursor: pointer;
+	font-family: "Inter", sans-serif;
+	font-weight: 500;
+	color: #293264;
+	margin: 0 12px 12px 0;
+	background-color: #ffa799;
+}
+
+.question-btn-selected:active {
+	box-shadow: 1px 1px 5px 0px rgba(0, 0, 0, 0.30) inset;
 }
